examples/test/testpolicy14619.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14619
  namespace: namespace419
spec:
  podSelector:
    matchLabels:
      key27: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value21
          key31: value21
          key27: value24
      podSelector:
        matchLabels:
          key12: value24
          key18: value6
          key13: value33
